--- a/css/style.css
+++ b/css/style.css
@@ -519,7 +519,7 @@ select:visited {
 }
 
 .apbc-nav-menu ul li a {
-  padding: 26px 20px;
+  padding: 26px 15px;
   color: #ffffff;
   font-weight: 500;
   text-transform: capitalize;
@@ -1535,3 +1535,37 @@ padding-right: 0%; padding-bottom:3%;}
 
 .volunteer-section a{ margin-bottom:30px;}
 }
+
+
+.volunteer-prefects-section {
+  padding: 100px 0;
+  background: #fff;
+}
+
+.volunteer-prefects-block{
+	padding:15px; width:100%;
+	margin-top:0%;
+}
+
+.volunteer-prefects-box{ padding:5px; border:solid 1px #6d6d6d; background: #f3f3f3;}
+
+.owl-prefects .owl-dots{
+	display:flex;
+	justify-content:center;	
+	gap:10px;
+	margin-top:2%;
+}
+.owl-prefects .owl-dot{
+	height:20px;
+	width:20px;
+	border-radius:50%;
+	border:1px solid #fecc00 !important;
+	background-color:#fff !important;
+}
+.owl-prefects .owl-dot.active{
+	background-color:#fecc00 !important;
+}
+
+.volunteer_gallery{ position:relative;}
+.volunteer_gallery_content{ position:absolute; background:#1a2d62; bottom:0; padding:10px 20px;}
+.volunteer_gallery_content h3{ font-size:16px; color:#fff; margin-bottom:0;}
